// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVGPartnerNode with children, renders component 1`] = `
<g>
  <SVGNodeInfo
    boxHeight={80}
    boxWidth={80}
    info="John"
    x={NaN}
    y={100}
  />
  <SVGPartnerLink
    dimensions={
      Object {
        "boxHeight": 80,
        "boxWidth": 80,
        "marginX": 50,
      }
    }
    offsetX={100}
    originX={NaN}
    originY={140}
    previousSubTreeWidth={200}
  />
  <SVGNode
    dimensions={
      Object {
        "boxHeight": 80,
        "boxWidth": 80,
        "marginX": 50,
      }
    }
    linkTo={
      Object {
        "x": NaN,
        "y": 140,
      }
    }
    node={
      Object {
        "level": 3,
        "partners": Array [],
        "value": "William",
      }
    }
    offsetX={100}
  />
</g>
`;

exports[`SVGPartnerNode without children, renders component 1`] = `
<g>
  <SVGNodeInfo
    boxHeight={80}
    boxWidth={80}
    info="John"
    x={NaN}
    y={100}
  />
  <SVGPartnerLink
    dimensions={
      Object {
        "boxHeight": 80,
        "boxWidth": 80,
        "marginX": 50,
      }
    }
    offsetX={100}
    originX={NaN}
    originY={140}
    previousSubTreeWidth={200}
  />
</g>
`;
